[package]
name = "hardcore"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-tnua = "0.18.0"
bevy-tnua-rapier2d = "0.6.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
bevy_framepace = "0.16.0"
bevy_rapier2d = "0.26.0"
bitflags = "2.5.0"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
static_assertions = "1.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
