[package]
name = "hardcore"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-tnua = "0.19.0"
bevy-tnua-rapier2d = "0.7.0"
bevy_framepace = "0.17.0"
bevy_rapier2d = "0.27.0"
bitflags = "2.6.0"
leafwing-input-manager = "0.14.0"
rand = "0.8.5"
static_assertions = "1.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
